--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+#uml model
+model.drawio
+
+#image folders *massive
+archive/
+archive.zip
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
